
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dv-flow-libcc"
version = "0.0.1"
dependencies = [
    "dv-flow-mgr"
]
authors = [
    {name = "Matthew Ballance", email = "matt.ballance@gmail.com"},
]
description = "Tasks for building artifacts from C/C++ code"
license = {file = "LICENSE" }

[project.entry-points."dv_flow.mgr"]
libhdlsim = "dv_flow.libcc.__ext__"

[tool.setuptools.package-data]
"dv_flow.libhdlsim" = ['**/flow.dv']
